--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,12 @@ social:
     #jianshu: 
     # twitter: 
     mail: 2304515590@qq.com
+    
+    
+# 百度统计 
+# 使用博客模板请去掉或者更换 id 
+baidu:
+    id: a226e783dd0e31cd3632d0ce49fa3325
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
