--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ enableToc: true
 
 # Comment
 comment:
-    # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
+    livere: MTAyMC81NTIwOC8zMTY3NQ==  # https://www.livere.com
     # disqus: 
     # uyan: 2143225  # 有言id,登录有言官网申请
 
