--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic
-title: 曾超
+title: 曾超的个人博客
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: Ace2003
+avatarTitle: Ace
 # 头像里面的描述
 avatarDesc: 随笔 | 生活
 url: "https://ace2003.github.io"
